Modernized the build so that GRAL can be built and used with current Java runtimes.
The project now builds with Gradle 9.7.1 instead of Gradle 5.3.1, which could not run on any JDK newer than 12 and failed in the Groovy initializer before any task was executed. Building requires a JDK 17 or later, which is Gradle's own requirement, while the library itself is compiled for Java 11 through the release option and therefore stays usable on older runtimes. Clean builds were verified on JDK 17, 21 and 25.

All third-party Gradle plugins were removed because they were what kept the build pinned to 2019. Cobertura and Coveralls were replaced by the built-in JaCoCo plugin, the license-gradle-plugin by a licenseCheck task that tolerates the end year of the copyright range and the CRLF line endings of some source files, the removed maven plugin by maven-publish, and the jmh-gradle-plugin by a plain jmh source set with a JavaExec task. Only built-in plugins remain, and there is no buildscript block anymore.

ProGuard was dropped as well. It was the reason the build failed on JDK 11 and later. It read java.base.jmod as a library jar and rejected its class files, and its renamesourcefileattribute option stripped the real file names from the published jar, which is what prevented IDEs from attaching the sources jar.

VectorGraphics2D is declared as a runtimeOnly dependency now and appears in the generated POM with runtime scope, so export to EPS, PDF and SVG no longer depends on the user adding the library manually. It is still loaded reflectively and GRAL still works without it.

The Checkstyle and PMD configurations were updated for Checkstyle 10 and PMD 7: LineLength had to move out of TreeWalker, JavadocMethod lost its scope and allowUndeclaredRTE properties in favor of MissingJavadocMethod, JavadocVariable switched to accessModifiers, and the java-basic rule set was replaced by category/java/errorprone.xml.

Both jars carry an Automatic-Module-Name for use on the module path,